Docker build on modules